--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,12 +42,20 @@
   version = "1.3.0"
 
 [[constraint]]
+  branch = "v2"
+  name = "github.com/go-validator/validator"
+
+[[constraint]]
   name = "github.com/gorilla/mux"
   version = "1.6.0"
 
 [[constraint]]
   branch = "master"
   name = "github.com/jmoiron/sqlx"
+
+[[constraint]]
+  name = "github.com/pborman/uuid"
+  version = "1.1.0"
 
 [[constraint]]
   name = "github.com/pkg/errors"
