--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -88,3 +88,7 @@
 [[constraint]]
   name = "gopkg.in/nullbio/null.v6"
   version = "6.3.0"
+
+[[constraint]]
+  name = "github.com/shopspring/decimal"
+  version = "1.0.0"
