--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,26 +1,3 @@
-
-# Gopkg.toml example
-#
-# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#  name = "github.com/x/y"
-#  version = "2.4.0"
-
-
 [[constraint]]
   name = "github.com/BurntSushi/toml"
   version = "0.3.0"
@@ -31,15 +8,15 @@
 
 [[constraint]]
   name = "github.com/dgrijalva/jwt-go"
-  version = "3.1.0"
+  version = "3.x.x"
 
 [[constraint]]
   name = "github.com/dimfeld/httptreemux"
-  version = "5.0.0"
+  version = "5.x.x"
 
 [[constraint]]
   name = "github.com/go-sql-driver/mysql"
-  version = "1.3.0"
+  version = "1.x.x"
 
 [[constraint]]
   branch = "v2"
@@ -47,7 +24,7 @@
 
 [[constraint]]
   name = "github.com/gorilla/mux"
-  version = "1.6.0"
+  version = "1.x.x"
 
 [[constraint]]
   branch = "master"
@@ -55,7 +32,7 @@
 
 [[constraint]]
   name = "github.com/pborman/uuid"
-  version = "1.1.0"
+  version = "1.x.x"
 
 [[constraint]]
   name = "github.com/pkg/errors"
@@ -67,11 +44,11 @@
 
 [[constraint]]
   name = "github.com/sirupsen/logrus"
-  version = "1.0.4"
+  version = "1.x.x"
 
 [[constraint]]
   name = "github.com/vattle/sqlboiler"
-  version = "2.5.0"
+  version = "2.x.x"
 
 [[constraint]]
   name = "github.com/x-cray/logrus-prefixed-formatter"
@@ -83,12 +60,12 @@
 
 [[constraint]]
   name = "gopkg.in/ldap.v2"
-  version = "2.5.1"
+  version = "2.x.x"
 
 [[constraint]]
   name = "gopkg.in/nullbio/null.v6"
   version = "6.3.0"
 
 [[constraint]]
-  name = "github.com/shopspring/decimal"
-  version = "1.0.0"
+  name = "github.com/ericlagergren/decimal"
+  version = "3.x.x"
