--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -69,3 +69,7 @@
 [[constraint]]
   name = "github.com/ericlagergren/decimal"
   version = "3.x.x"
+
+[[constraint]]
+name = "github.com/volatiletech/sqlboiler"
+version = "2.x.x"
